@@ -1,3 +1,5 @@
+	* Fixed whitespace and a minor spelling error in trompeloeil.hpp.
+
 	* Fix Issue #48: Move "re" in lambda capture list in "regex_check".
 	* Fix Issue #55: Restore warnings for Clang builds.
 	* Correct spelling of SANITIZE for clang Xcode builds.
